# hsr-discord-bot

./: .dockerignore  .gitignore  Dockerfile  main.py  pyproject.toml
core/: utils.py
test/: test_utils.py
